# auto-index

./: Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: publish.yml
src/: cli.rs  index.rs  main.rs  pack.rs  structs.rs  wrapped.rs
src/convert/: io_fast.rs  mod.rs
