[package]
name = "box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive", "string"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha256 = "1.1.3"
toml = "0.7.4"

[build-dependencies]
vergen = { version = "8.1.3", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
